--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,25 @@ button {
 }
 
 #openExtension {
-  height: 25px;
+  height: 20px;
   cursor: pointer;
   position: absolute;
-  left: 10px;
-  top: 5px;
+  left: 0px;
+  top: 2px;
+}
+
+#openGithub {
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+  position: absolute;
+  right: 0px;
+  top: 4px;
+  transition: fill 0.3s ease;
+}
+
+#openGithub:hover {
+  fill: #0366d6;
 }
 
 .page {
@@ -72,6 +86,6 @@ button {
 }
 
 /* 只有loadingpage高度自适应有问题，单独设置一下 */
-#loadingPage{
+#loadingPage {
   min-height: 100px;
 }
